k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: estokvel
  labels:
    app.kubernetes.io/part-of: estokvel
